# fhir-compiler

./: .gitignore  dune  dune-project  fhir_compiler.opam  fhir_compiler.opam.locked
.github/workflows/: main.yml
backends/swift/src/: class.ml  class.mli  dune  enum.ml  enum.mli  formatters.ml  main.ml  prelude.ml  sum.ml  sum.mli  swift_field.ml
backends/swift/test/: dune  integration.ml  resources.ml  unit.ml
backends/swift/test/e2e/account.t/: run.t
backends/swift/test/e2e/account_status.t/: run.t
backends/swift/test/e2e/patient.t/: run.t
lib/: backend.ml  compiler.ml  complex_datatype.ml  datatype.ml  dune  element.ml  element.mli  exceptions.ml  fhir.ml  parser.ml  path.ml  path.mli  resource.ml  resource.mli  structure.ml  structure.mli
lib/src/: backend.ml  codesystem.ml  codesystem.mli  compiler.ml  complex_datatype.ml  datatype.ml  dune  element.ml  element.mli  exceptions.ml  fhir.ml  parser.ml  path.ml  path.mli  resource.ml  simple_datatype.ml  structure.ml  structure.mli
lib/test/: datatype_tests.ml  dune  element_tests.ml  path_tests.ml  unit.ml
lib_test/: datatype_tests.ml  element_tests.ml  path_tests.ml  unit.ml
parser/STU3/: downloader.ml  dune  main.ml  structure.ml  structure.mli
parser/STU3_test/: dune  integration.ml  resources.ml  unit.ml
parser/STU3_test/e2e/account.t/: run.t
parser/STU3_test/e2e/patient.t/: run.t
parsers/STU3/src/: STU3_Parser.ml  codesystem.ml  codesystem.mli  downloader.ml  dune  structure.ml  structure.mli
parsers/STU3/test/: dune  integration.ml  resources.ml  unit.ml
parsers/STU3/test/e2e/account.t/: run.t
parsers/STU3/test/e2e/account_type.t/: run.t
parsers/STU3/test/e2e/patient.t/: run.t
parsers/STU3/test/resources/: account-stu3.json  codesystem-account-status-stu3.json  patient-stu3.json
swift/: class.ml  dune  main.ml  resource.ml  resource.mli  swift_field.ml
test/: dune  reader.ml  unit.ml
