opam-version: "2.0"
maintainer: "Nick Robison <nicholas.a.robison@omb.eop.gov>"
authors: ["Nick Robison <nicholas.a.robison@omb.eop.gov>"]
homepage: "https://github.com/nickrobison-usds/fhir-compiler"
doc: "https://github.com/nickrobison-usds/fhir-compiler"
bug-reports: "https://github.com/nickrobison-usds/fhir-compiler/issues"
depends: [
  "ocaml" {> "4.06.0"}
  "dune" {> "2.1"}
  "dune-build-info" {build}
  "bos"
  "base"
  "stdio"
  "fmt"
  "yojson"
  "ppx_deriving"
  "ppx_yojson_conv"
  "uri"
  "re"
  "calendar"
  "ISO8601"
  "cmdliner"
  "cohttp-lwt-unix"
  "camlzip"
  "logs"
  "stdio"
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/nickrobison-usds/fhir-compiler.git"
synopsis: "Experimental compiler from FHIR resources to programming languages"
