(test
 (name unit)
 (modules unit)
 (libraries alcotest base bos fhir_compiler.backends.swift))

(executable
 (name integration)
 (modules integration resources)
 (libraries bos base fhir_compiler.lib fhir_compiler.backends.swift))

(cram
 (applies_to :whole_subtree)
 (deps integration.exe (source_tree resources)))
