(test
 (name unit)
  (modules unit reader resources)
  (libraries alcotest base bos yojson fhir_compiler.parser.stu3)
  (deps (source_tree resources)))

(executable
 (name integration)
 (modules integration)
 (libraries base bos yojson fhir_compiler.parser.stu3))

(cram
 (applies_to :whole_subtree)
 (deps integration.exe (source_tree resources)))
